# aarchitect

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/server/: specification.md
server/: package-lock.json  package.json
server/src/: client.js  index.js  tracers.js  warner.js
src/: event.rs  main.glade  main.glade~  main.rs  net.rs
