[package]
name = "aarchitect"
version = "0.1.0"
authors = ["rodovia <rodoviabr102@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.59"
websocket = "0.26.2"
lazy_static = "1.4.0"
serde = {version = "1.0.126", features = ["derive"]}
log = "0.4.13"

[target.'cfg(windows)'.dependencies]
cursive = { version = "0.16.3", features = ["pancurses-backend"], default-features = false }

[target.'cfg(not(windows))'.dependencies]
cursive = { version = "0.16.3" }
